--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,10 +11,22 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
+    signingConfigs {
+        liveSigning {
+            keyAlias 'greeting'
+            keyPassword 'Admin@123'
+            storeFile file('..\\keystore\\greeting.jks')
+            storePassword 'Admin@123'
+        }
+
+    }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.liveSigning
         }
     }
 
