--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
             android:theme="@android:style/Theme.Translucent" />
         <activity
             android:name=".GreetingActivity"
-            android:label="@string/title_activity_greeting"
+            android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
 
             <intent-filter>
